src/objects/List_View_Field__c.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <referenceTo>Field__c</referenceTo>
        <relationshipLabel>List View Fields</relationshipLabel>
        <relationshipName>List_View_Fields</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>List_View__c</fullName>
        <label>List View</label>
        <referenceTo>List_View__c</referenceTo>
        <relationshipLabel>List View Fields</relationshipLabel>
        <relationshipName>List_View_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <picklist>
            <picklistValues>
                <fullName>EQUALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT EQUALS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <externalId>true</externalId>
        <label>Unique Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>List View Field</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List View Fields</pluralLabel>
    <recordTypes>
        <fullName>Column</fullName>
        <active>true</active>
        <label>Column</label>
    </recordTypes>
    <recordTypes>
        <fullName>Filter</fullName>
        <active>true</active>
        <label>Filter</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>